--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <meta
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-      name="viewport"
-    >
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      name="viewport">
     <style>
       body {
         margin: 0;
+        overscroll-behavior: none;
       }
 
       canvas {
@@ -17,7 +17,9 @@
       }
     </style>
   </head>
+
   <body>
     <script src="main.js"></script>
   </body>
+
 </html>
